Phase5/negative_tests/prog10.dlp
//'.' between x and y decl
var x = 2. y = 3;
return 0;